# python-bitcointx

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  release-notes.md  setup.py
.github/workflows/: main.yml
bitcointx/: __init__.py  base58.py  bech32.py  rpc.py  segwit_addr.py  signmessage.py  util.py  wallet.py
bitcointx/core/: __init__.py  _bignum.py  _ripemd160.py  bitcoinconsensus.py  ecdasig_parse_der_lax.py  key.py  psbt.py  script.py  scripteval.py  secp256k1.py  serialize.py  sha256.py
bitcointx/tests/: __init__.py  test_async_and_threading.py  test_base58.py  test_bech32.py  test_core.py  test_hd_keys.py  test_imports.py  test_key.py  test_keystore.py  test_load_secp256k1.py  test_psbt.py  test_ripemd160.py  test_rpc.py  test_script.py  test_scripteval.py  test_secp256k1_compat.py  test_segwit.py  test_serialize.py  test_sha256.py  test_signmessage.py  test_transactions.py  test_wallet.py
bitcointx/tests/data/: script_tests.json
doc/: index.rst
examples/: bip-0070-payment-protocol.py  derive-hd-key.py  publish-text.py  sign-message.py  sign-psbt.py  spend-p2pkh-txout.py  spend-p2sh-txout.py  timestamp-op-ret.py
